<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingBottom="40dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foglalasImg"
            android:adjustViewBounds="true"
            android:maxWidth="350dp"
            android:maxHeight="200dp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foglalasNev"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/foglalasImg"
            android:text="@string/szallas_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foglalasHely"
            android:layout_below="@+id/foglalasNev"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/szallas_place"/>

        <RatingBar
            android:id="@+id/foglalasRating"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foglalasHely"
            android:isIndicator="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:numStars="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foglalasPrice"
            android:layout_below="@+id/foglalasRating"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="11sp"
            android:layout_marginTop="5dp"
            android:text="@string/szallas_ar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/foglalasinfo"
            android:layout_below="@id/foglalasPrice"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:text="@string/szallas_info"/>

        <TextView
            android:id="@+id/foglalasKezd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="76dp"
            android:layout_marginTop="10dp"
            android:text="@string/erkezes"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/foglalasinfo" />

        <TextView
            android:id="@+id/foglalasVeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:text="@string/tavozas"
            android:layout_below="@id/foglalasKezd"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/foglalasDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foglalasVeg"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#E30909"
            android:enabled="true"
            android:minHeight="48dp"
            android:text="@string/lemondom"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>


</androidx.cardview.widget.CardView>