<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Szallasok"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingTop="10dp">


    <Spinner
        android:id="@+id/helySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foglalasokBtn" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helySpinner"
        app:layout_constraintVertical_bias="0.043" />

    <ImageButton
        android:id="@+id/profilBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/profile"
        android:minHeight="48dp"
        android:src="@drawable/profil_icon"
        android:onClick="startProfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FF1A4321" />

    <ImageButton
        android:id="@+id/foglalasokBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/foglalasaim"
        android:minHeight="48dp"
        android:src="@drawable/foglalasok_icon"
        android:onClick="startFoglaltak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.313"
        app:layout_constraintStart_toEndOf="@+id/profilBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FF1A4321" />

    <ImageButton
        android:id="@+id/kijelenkezesBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/logout"
        android:minHeight="48dp"
        android:onClick="logout"
        android:src="@drawable/logout_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/foglalasokBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FF1A4321" />


</androidx.constraintlayout.widget.ConstraintLayout>